Verif/Test/Invalide/test_erreur_3.82-7.deca
// Description:
//    Programme soulevant l'erreur (3.82)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'boolean' et 'int' sont incompatibles avec l'opérateur binaire '||' (règle 3.82)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = true || 1;
}